Added another paragraph.

--- a/Basic_HTML_3.html
+++ b/Basic_HTML_3.html
@@ -8,6 +8,7 @@
 	<body>
 		<p>This is my "linking CSS assignment!</p>
 		<p>Basically I am writing a CSS rule set that assigns text align and color properties using the link tag.</p>
+		<p>Added another paragraph.</p>
 		
 	</body>
 </html>
